--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,45 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+custom-range {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: 8px;
+    background: #EA5326; /* Red background for the range track */
+    border-radius: 5px;
+    outline: none;
+  }
+
+  .custom-range::-webkit-slider-runnable-track {
+    height: 8px;
+    background: #EA5326; /* Red track for WebKit browsers */
+    border-radius: 5px;
+  }
+
+  .custom-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border: 2px solid #EA5326;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+
+  .custom-range::-moz-range-track {
+    height: 8px;
+    background: #EA5326; /* Red track for Firefox */
+    border-radius: 5px;
+  }
+
+  .custom-range::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    border: 2px solid #EA5326;
+    border-radius: 50%;
+    cursor: pointer;
+  }
