--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 body{
   overflow-x: hidden;
 }
-.magnifier{
+/* .magnifier{
   width: 100%!important;
   height: 100%!important;
 }
@@ -13,4 +13,4 @@ body{
 .magnifier-image{
   border-radius:5px!important;
   height: 100%!important;
-}
+} */
